Fixed many bugs and send messages is enabled seamlessly
